# OpenCOMAL

./: .gitignore  CMakeLists.txt  README.md  kate-lsp-config.json  ofile2  ofile3  ofile7  ofile8  opencomal.cppcheck  pinkpanther.abc  splittest.cml  test_document.sh  test_lsp_kate.sh  test_lsp_simple.sh
.github/: CONTINUE_LATER.md  copilot-instructions.md  dependabot.yml
.github/workflows/: build-packages.yml  codeql.yml  test.yml
comal-ide/: CMakeLists.txt
comal-ide/include/: code_editor_panel.h  comal_lsp_client.h  debug_panel.h  direct_command_panel.h  file_browser_panel.h  graphics_panel.h  help_panel.h  main_window.h  qsci_lexer_comal.h  qt_io.h  run_worker.h  settings_dialog.h
comal-ide/src/: code_editor_panel.cpp  comal_lsp_client.cpp  debug_panel.cpp  direct_command_panel.cpp  file_browser_panel.cpp  graphics_panel.cpp  help_panel.cpp  main.cpp  main_window.cpp  qsci_lexer_comal.cpp  qt_io.cpp  run_worker.cpp  settings_dialog.cpp
comal-lsp/: CMakeLists.txt  OpenCOMAL.json  README.md
comal-lsp/include/: comal_keyword_docs.h  comal_lsp_diagnostics.h  comal_lsp_protocol.h  comal_lsp_server.h
comal-lsp/src/: lsp_diagnostics.cpp  lsp_protocol.cpp  lsp_server.cpp
comal-lsp/tests/: test_framework.h  test_integration.cpp  test_lsp_protocol.cpp  test_lsp_server.cpp
comal-lsp/tools/: comal_lsp.cpp
docs/: AST_MODERNIZATION.md  AST_USAGE.md  COMAL_LSP_USAGE.md  GRAPHICS_COMMANDS.md  PARALLEL_QUEUE_DESIGN.md  PLAY_COMMAND.md  PLAY_COMMAND_DESIGN.md  PROJECT_STATUS.md  README.md  comal-keyword-docs.tsv  future_graphics_addon.md
examples/: aliens.lst  mandelbrot_pixel.lst  mandelbrot_pixel_spawn.lst
legacy/doc/: PIPELINE.md  REFORM_PLAN.md  SPLIT.md
legacy/samples/: CGI_README.md  cgi_debug2.lst  cgi_demo.lst  cgi_split_demo.lst  cgi_v2.lst  cgi_working.lst  filter_pipe.lst  http_cgi.lst  simple_test.lst  test_assign.lst  test_cgi.lst  test_cgi_debug.lst  test_empty.lst  test_print.lst  test_while_input.lst  web_dbg.lst
legacy/samples/tests/: draw1.lst  funcvar1.lst  funcvar2.lst  len3.lst  split1.lst  web_integration_test.sh
legacy/scripts/: serve_comal.sh  serve_wrapper.sh
legacy/src/: pdcexec.c  pdcfunc.h  pdclinux.c  pdcmain.c  pdcparss.c  pdcprog.c  pdcsqash.h  version.h
libcomal-graphics/: CMakeLists.txt
libcomal-graphics/include/: comal_graphics.h  comal_graphics_commands.h  comal_scene_model.h
libcomal-graphics/src/: graphics_commands.cpp  scene_model.cpp
libcomal-graphics/tests/: test_commands.cpp  test_scene_model.cpp
libcomal-parser/: CMakeLists.txt  README.md
libcomal-parser/include/: comal_ast.h  comal_ast_modern.h  comal_base.h  comal_constants.h  comal_functions.h  comal_id.h  comal_legacy_shims.h  comal_memory.h  comal_messages.h  comal_misc.h  comal_parser_api.h  comal_program.h  comal_string_utils.h
libcomal-parser/src/: ast_compat.cpp  ast_compat.h  lexer.l  lexer_support.cpp  lexer_support.h  modern_builders.cpp  modern_builders.h  parser.y  parser_api.cpp  parser_deps.cpp  parser_support.cpp  parser_support.h
libcomal-parser/tools/: ast_demo.cpp  parse_cli.cpp
libcomal-runtime/: CMakeLists.txt
libcomal-runtime/include/: comal_builtins.h  comal_error.h  comal_evaluator.h  comal_executor.h  comal_file_io.h  comal_interpreter.h  comal_interrupt.h  comal_io.h  comal_scope.h  comal_value.h
libcomal-runtime/src/: builtins.cpp  evaluator.cpp  executor.cpp  file_io.cpp  program.cpp  runtime_error.cpp  scope.cpp  terminal_io.cpp  value.cpp
libcomal-runtime/tools/: comal_run.cpp
libcomal-sound/: CMakeLists.txt
libcomal-sound/include/: comal_abc.h  comal_sound.h
libcomal-sound/src/: abc_parser.cpp  midi_player.cpp  sound_commands.cpp  sound_engine.cpp  tone_player.cpp
libcomal-sound/tests/: test_abc_parser.cpp  test_commands.cpp  test_engine.cpp
packaging/: README.md
packaging/debian/: postinst.tpl  prerm.tpl
packaging/desktop/: comal-ide.desktop
packaging/rpm/: postinstall.tpl
samples/: cgi_final.lst  simple_cgi.lst  test_cgi_fixed.lst  test_cgi_simple.lst  test_empty_input.lst  test_headers.lst  test_loop_empty.lst  test_while.lst  web_skeleton.lst
samples/tests/: pipe_test.sh
scripts/: comal_cgi_server.py
src/: Makefile  pdcexp.c  pdcglob.h  pdclexs.c  pdclist.c  pdcpars.tab.h  pdcpars.y  pdcrun.c  pdcsqash.c
tests/: run_tests.sh  split_test.lst  test_tone_play.sh  validate_comal_keyword_docs.sh
tests/programs/: draw1.lst  input#1.lst  len2.lst  print#1.lst  spawn_wait1.lst  spawn_wait2.lst  spawn_wait3.lst  tone_async.lst  tone_block.lst  tone_play_test.lst
tests/programs-nonum/: abc_data_play.lst  case1.lst  collatz.lst  data1.lst  draw_bare.lst  draw_text.lst  encounters.lst  exit1.lst  file_io_eof1.lst  for1.lst  func1.lst  if1.lst  mixed1.lst  nested1.lst  pinkpanther_play.lst  proc1.lst  queue_basic.lst  random_lit.lst  random_loop.lst  random_minimal.lst  random_simple.lst  random_skip.lst  random_write.lst  repeat1.lst  simple1.lst  spawn_args.lst  spawn_closed_queue.lst  trap1.lst  while1.lst
